--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,7 +4,7 @@
 	
 	"icons": [
 		{
-			"src": "/res/yapms.png",
+			"src": "/app/res/yapms.png",
 			"type": "image/png",
 			"sizes": "192x192"	
 		}
