--- a/app/manifest.json
+++ b/app/manifest.json
@@ -7,6 +7,11 @@
 			"src": "/app/res/yapms.png",
 			"type": "image/png",
 			"sizes": "192x192"	
+		},
+		{
+			"src": "/app/res/yapms-512.png",
+			"type": "image/png",
+			"sizes": "512x512"	
 		}
 	],
 	"start_url": "/app/?m=true",
