--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
 	
 	"icons": [
 		{
-			"src": "/app/res/yapms.png",
+			"src": "/yapms-192.png",
 			"type": "image/png",
 			"sizes": "192x192"	
 		},
 		{
-			"src": "/app/res/yapms-512.png",
+			"src": "/yapms-512.png",
 			"type": "image/png",
 			"sizes": "512x512"	
 		}
