moved logos into res

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,12 +4,32 @@
 	
 	"icons": [
 		{
-			"src": "/app/yapms-192.png",
+			"src": "/app/res/yapms-48.png",
+			"type": "image/png",
+			"sizes": "48x48"	
+		},
+		{
+			"src": "/app/res/yapms-72.png",
+			"type": "image/png",
+			"sizes": "72x72"	
+		},
+		{
+			"src": "/app/res/yapms-96.png",
+			"type": "image/png",
+			"sizes": "96x96"	
+		},
+		{
+			"src": "/app/res/yapms-144.png",
+			"type": "image/png",
+			"sizes": "144x144"	
+		},
+		{
+			"src": "/app/res/yapms-192.png",
 			"type": "image/png",
 			"sizes": "192x192"	
 		},
 		{
-			"src": "/app/yapms-512.png",
+			"src": "/app/res/yapms-512.png",
 			"type": "image/png",
 			"sizes": "512x512"	
 		}
